Changed category tests to use default preference file. Fixes #2374
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6681 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/tsts/CropCam2map/Makefile
+++ b/isis/src/base/tsts/CropCam2map/Makefile
@@ -6,11 +6,11 @@ labels.txt.IGNORELINES = ByteOrder StartByte Bytes
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APP1NAME) from= $(INPUT)/lua0825f.cub \
+	$(APP1NAME) $(TSTARGS) from= $(INPUT)/lua0825f.cub \
 	  to= $(OUTPUT)/cropTruth.cub \
 	  sample=13 nsamples=100 \
 	  line=40 nlines=100 > /dev/null;
-	$(APP2NAME) from= $(OUTPUT)/cropTruth.cub \
+	$(APP2NAME) $(TSTARGS) from= $(OUTPUT)/cropTruth.cub \
 	  to= $(OUTPUT)/CropCam2mapTruth.cub \
 	  > /dev/null;
-	catlab from=$(OUTPUT)/CropCam2mapTruth.cub > $(OUTPUT)/labels.pvl;
+	catlab $(TSTARGS) from=$(OUTPUT)/CropCam2mapTruth.cub > $(OUTPUT)/labels.pvl;
