--- a/isis/src/mgs/tsts/moc/Makefile
+++ b/isis/src/mgs/tsts/moc/Makefile
@@ -6,34 +6,34 @@ APP4NAME = getsn
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APP1NAME) from= $(INPUT)/ab102302.img \
+	$(APP1NAME) $(TSTARGS) from= $(INPUT)/ab102302.img \
 	  to= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub > /dev/null
 
-	$(APP2NAME) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
+	$(APP2NAME) $(TSTARGS) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
 	  > /dev/null
 
-	$(APP3NAME) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
+	$(APP3NAME) $(TSTARGS) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
 	  to= $(OUTPUT)/ab102302.img--finalOutput.pvl SAMPLE=2 LINE=2 ALLOWOUTSIDE=no \
 	  > /dev/null
 
-	$(APP3NAME) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
+	$(APP3NAME) $(TSTARGS) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
 	  to= $(OUTPUT)/ab102302.img--finalOutput.pvl SAMPLE=335 LINE=2 ALLOWOUTSIDE=no \
 	  > /dev/null
 
-	$(APP3NAME) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
+	$(APP3NAME) $(TSTARGS) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
 	  to= $(OUTPUT)/ab102302.img--finalOutput.pvl SAMPLE=335 LINE=639 ALLOWOUTSIDE=no \
 	  > /dev/null
 
-	$(APP3NAME) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
+	$(APP3NAME) $(TSTARGS) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
 	  to= $(OUTPUT)/ab102302.img--finalOutput.pvl SAMPLE=2 LINE=639 ALLOWOUTSIDE=no \
 	  > /dev/null
 
-	$(APP3NAME) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
+	$(APP3NAME) $(TSTARGS) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
 	  to= $(OUTPUT)/ab102302.img--finalOutput.pvl SAMPLE=194 LINE=335 ALLOWOUTSIDE=no \
 	  > /dev/null
 
 	echo -e "\nOutput of getsn..." > $(OUTPUT)/ab102302.img--getsnOutput.txt && \
-          $(APP4NAME) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
+          $(APP4NAME) $(TSTARGS) from= $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub \
           >> $(OUTPUT)/ab102302.img--getsnOutput.txt
 
 	$(RM) $(OUTPUT)/ab102302.img--moc2isis-spiceinit.cub > /dev/null
