--- a/isis/src/base/tsts/CropEnlargeCam2map/Makefile
+++ b/isis/src/base/tsts/CropEnlargeCam2map/Makefile
@@ -6,14 +6,14 @@ CropEnlargeCam2mapTruth.cub.TOLERANCE = 0.00001
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APP1NAME) from= $(INPUT)/lua0825f.cub \
+	$(APP1NAME) $(TSTARGS) from= $(INPUT)/lua0825f.cub \
 	  to= $(OUTPUT)/cropTruth.cub+real \
 	  sample=15 nsamples=150 \
 	  line=50 nlines=150 > /dev/null;
-	$(APP2NAME) from= $(OUTPUT)/cropTruth.cub \
+	$(APP2NAME) $(TSTARGS) from= $(OUTPUT)/cropTruth.cub \
 	  to= $(OUTPUT)/CropEnlargeTruth.cub+real \
 	  interp=nearestneighbor sscale=2 lscale=2 > /dev/null;
-	$(APP3NAME) from= $(OUTPUT)/CropEnlargeTruth.cub \
+	$(APP3NAME) $(TSTARGS) from= $(OUTPUT)/CropEnlargeTruth.cub \
 	  to= $(OUTPUT)/CropEnlargeCam2mapTruth.cub+real \
 	  > /dev/null;
-	catlab from=$(OUTPUT)/CropEnlargeCam2mapTruth.cub > $(OUTPUT)/labels.pvl;
+	catlab $(TSTARGS) from=$(OUTPUT)/CropEnlargeCam2mapTruth.cub > $(OUTPUT)/labels.pvl;
