--- a/isis/src/cassini/tsts/vims/Makefile
+++ b/isis/src/cassini/tsts/vims/Makefile
@@ -14,32 +14,32 @@ C1514302573_1.irBand71.sinu.cub.TOLERANCE = 0.0000001
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(IMPORT) from= $(INPUT)/CM_1477461989_1.cub \
+	$(IMPORT) $(TSTARGS) from= $(INPUT)/CM_1477461989_1.cub \
           VIS= $(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
           IR= $(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub > /dev/null
 
 #  Test IR
-	$(SPICEINIT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
+	$(SPICEINIT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
 	  PCK=$(ISIS3DATA)/cassini/kernels/pck/cpck24Jul2006.tpc \
 	  > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
+	$(CAMPT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
           to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl SAMPLE=35 LINE=8 ALLOWOUTSIDE=no \
           > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
+	$(CAMPT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
           to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl SAMPLE=55 LINE=33 ALLOWOUTSIDE=no \
           > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
+	$(CAMPT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
           to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl SAMPLE=32 LINE=58 ALLOWOUTSIDE=no \
           > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
+	$(CAMPT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
           to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl SAMPLE=4 LINE=33 ALLOWOUTSIDE=no \
           > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
+	$(CAMPT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
           to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl SAMPLE=32 LINE=33 ALLOWOUTSIDE=no \
           > /dev/null
 
@@ -50,27 +50,27 @@ commands:
 	$(MV) $(OUTPUT)/temp.txt $(OUTPUT)/CM_1477461989_1.cub--finalOutput-ir.pvl
 
 #  Test Vis
-	$(SPICEINIT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+	$(SPICEINIT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
           PCK=$(ISIS3DATA)/cassini/kernels/pck/cpck24Jul2006.tpc \
           > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+	$(CAMPT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
           to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl SAMPLE=35 LINE=8 ALLOWOUTSIDE=no \
           > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+	$(CAMPT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
           to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl SAMPLE=55 LINE=33 ALLOWOUTSIDE=no \
           > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+	$(CAMPT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
           to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl SAMPLE=32 LINE=58 ALLOWOUTSIDE=no \
           > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+	$(CAMPT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
           to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl SAMPLE=4 LINE=33 ALLOWOUTSIDE=no \
           > /dev/null
 
-	$(CAMPT) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
+	$(CAMPT) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub \
           to= $(OUTPUT)/CM_1477461989_1.cub--finalOutput-vis.pvl SAMPLE=32 LINE=33 ALLOWOUTSIDE=no \
           > /dev/null
 
@@ -84,7 +84,7 @@ commands:
 
 	$(ECHO) "Output of getsn..." >> $(OUTPUT)/CM_1477461989_1.cub--getsnOutput.txt
 
-	$(GETSN) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
+	$(GETSN) $(TSTARGS) from=$(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-ir.cub \
           >> $(OUTPUT)/CM_1477461989_1.cub--getsnOutput.txt
 
 	$(RM) $(OUTPUT)/CM_1477461989_1.cub--vims2isis-spiceinit-vis.cub > /dev/null
@@ -92,13 +92,13 @@ commands:
 	$(RM) $(OUTPUT)/../print.prt > /dev/null
 
 #  Test south pole
-	$(CAMPT) from=$(INPUT)/C1596102183_1.irBand71.cub type=ground lat=-90 lon=0 \
+	$(CAMPT) $(TSTARGS) from=$(INPUT)/C1596102183_1.irBand71.cub type=ground lat=-90 lon=0 \
           to=$(OUTPUT)/C1596102183_1.ir.pvl > /dev/null
 
 #  Make sure there are no extra pixels in projected cube.  Global projections were getting ghost
 #  images because the vims camera model finds solution for any lat/lon and the range checking 
 #  was not working correctly.
-	$(CAM2MAP) from=$(INPUT)/C1514302573_1.irBand71.cub to=$(OUTPUT)/C1514302573_1.irBand71.sinu.cub \
+	$(CAM2MAP) $(TSTARGS) from=$(INPUT)/C1514302573_1.irBand71.cub to=$(OUTPUT)/C1514302573_1.irBand71.sinu.cub \
           map='$$base/templates/maps/sinusoidal.map' \
           pixres=ppd resolution=2 defaultrange=map minlat=-90 maxlat=90 minlon=0 maxlon=360 \
           trim=yes > /dev/null
