PROG camdev test fixes. Fixes #2347.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6688 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/local/apps/camdev/tsts/all/Makefile
+++ b/isis/src/local/apps/camdev/tsts/all/Makefile
@@ -1,7 +1,7 @@
 APPNAME = camdev
 
 # 1.52587890625e-05
-camdevTruth.cub.TOLERANCE = .0000153
+all_camdev_bands.cub.TOLERANCE = .0000153
 
 include $(ISISROOT)/make/isismake.tsts
 
@@ -49,4 +49,5 @@ commands:
 	  localsolartime=yes \
 	  solarlongitude=yes \
 	  morphology=yes \
-	  albedo=yes> /dev/null; 
+	  albedo=yes > /dev/null; 
+	  $(RM) print.prt > /dev/null;
