Removed extraneous files from leisa2isis and ProcessMosaic tests. Fixes #2409
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6711 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/newhorizons/apps/leisa2isis/tsts/calib/Makefile
+++ b/isis/src/newhorizons/apps/leisa2isis/tsts/calib/Makefile
@@ -26,7 +26,7 @@ commands:
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
-	  errormap=true \
+	  errormap=$(OUTPUT)/errormap.cub \
 	  >& $(OUTPUT)/temp.txt` ]; then \
 	  true; \
 	fi;
@@ -38,7 +38,7 @@ commands:
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
-	  errormap=true \
+	  errormap=$(OUTPUT)/errormap.cub \
 	  >& $(OUTPUT)/temp.txt` ]; then \
 	  true; \
 	fi;
@@ -50,7 +50,7 @@ commands:
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
-	  errormap=true \
+	  errormap=$(OUTPUT)/errormap.cub \
 	  >& $(OUTPUT)/temp.txt` ]; then \
 	  true; \
 	fi;
@@ -62,7 +62,7 @@ commands:
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
-	  quality=true \
+	  quality=$(OUTPUT)/quality.cub \
 	  >& $(OUTPUT)/temp.txt` ]; then \
 	  true; \
 	fi;
@@ -74,7 +74,7 @@ commands:
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
-	  quality=true \
+	  quality=$(OUTPUT)/quality.cub \
 	  >& $(OUTPUT)/temp.txt` ]; then \
 	  true; \
 	fi;
@@ -86,7 +86,7 @@ commands:
 	if [ `$(APPNAME) \
 	  from=$(OUTPUT)/temp.fit \
 	  to=$(OUTPUT)/junk.cub \
-	  quality=true \
+	  quality=$(OUTPUT)/quality.cub \
 	  >& $(OUTPUT)/temp.txt` ]; then \
 	  true; \
 	fi;
