Updated documentation and added user examples to apollocal. Updated coding standards for apollocal. Fixes #2410.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6756 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apollocal/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apollocal/tsts/default/Makefile
@@ -3,4 +3,5 @@ APPNAME = apollocal
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	cp $(INPUT)/deferred.txt $(OUTPUT)/deferred.txt > /dev/null;
+	$(APPNAME) FROM=$(INPUT)/apollowarptrimmed.cub TO=$(OUTPUT)/apollocaltrimmed.cub > /dev/null;
+
