Fixed Makefile in apollocal. References #2410.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6761 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/apollo/apps/apollocal/tsts/default/Makefile
+++ b/isis/src/apollo/apps/apollocal/tsts/default/Makefile
@@ -3,5 +3,6 @@ APPNAME = apollocal
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) FROM=$(INPUT)/apollowarptrimmed.cub TO=$(OUTPUT)/apollocaltrimmed.cub > /dev/null;
+	$(APPNAME) FROM=$(INPUT)/apollowarptrimmed.cub \
+	TO=$(OUTPUT)/apollocaltrimmed.cub > /dev/null;
 
