Updated cnetref to work when selecting a High Resolution on some images. Fixes #2149.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@6912 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetref/tsts/resolutionHigh/Makefile
+++ b/isis/src/control/apps/cnetref/tsts/resolutionHigh/Makefile
@@ -15,3 +15,9 @@ commands:
 	  networkid=DefaultTruth \
 	  Description=RefByResolutionHigh > /dev/null;
 	  $(RM) $(OUTPUT)/cube.lis;
+	$(APPNAME) fromlist=$(INPUT)/apolloList.lis \
+	  cnet=$(INPUT)/apolloSeed.net \
+	  criteria=resolution \
+	  type=high \
+	  onet=$(OUTPUT)/apolloTruth.net > /dev/null;
+# cnetref fromlist=/home/acpaquette/REV71.lis cnet=/home/acpaquette/AS15-REV71_Add-SPLT10.net onet=/home/acpaquette/temp.net criteria=resolution
